Fix dropdown arrow truncation (bug 879174)

--- a/hearth/media/css/cat-dropdown.styl
+++ b/hearth/media/css/cat-dropdown.styl
@@ -235,6 +235,7 @@ $cat-icon-size-desktop = 60px;
                     background-size: 30px auto;
                     margin-left: 20px;
                     position: static;
+                    width: 30px;
                 }
             }
         }
